--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 </div>
 </div>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="football.jpg"></div>
+<div class="item-media"><img class="app-icon" src="football2.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Watch NFL Football Free</div>
