--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 <div class="item-media"><img class="app-icon" src="Boxing.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
-<div class="item-title">Watch Boxing Free/div>
+<div class="item-title">Watch Boxing Free</div>
 <div class="item-after">
 <a href="itweakvip/OGInject/Boxing.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
@@ -296,15 +296,15 @@
  </div>
 </div>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="Rghp20K.png"></div>
+<div class="item-media"><img class="app-icon" src="Volleyball.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
-<div class="item-title">Disney++</div>
+<div class="item-title">Watch Volleyball Free</div>
 <div class="item-after">
-<a href="itweakvip/OGInject/disney.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
+<a href="itweakvip/OGInject/volleyball.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 </div>
 </div>
-<div class="item-subtitle">Free Disney Plus</div>
+<div class="item-subtitle">Volleyball on Windows, Mac, IOS, Android</div>
 </div>
 </div>
 
