--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
  </div>
 </div>
 <div class="item-content">
-<div class="item-media"><img class="app-icon" src="Volleyball.png"></div>
+<div class="item-media"><img class="app-icon" src="Volleyball2.png"></div>
 <div class="item-inner">
 <div class="item-title-row">
 <div class="item-title">Watch Volleyball Free</div>
