--- a/itweakvip/OGInject/Basketball.html
+++ b/itweakvip/OGInject/Basketball.html
@@ -56,7 +56,7 @@
 						<br>
 						
                                     </div>
-                                    <a href="#" onclick="install('tork3.png', 'Torque Pro (OBD 2 & Car)','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
+                                    <a href="#" onclick="install('Basketball.jpg', 'Watch Basketball Free','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>Install</b></span>
                                     </a>
                                     <div class="clearfix"></div>
