--- a/itweakvip/OGInject/Basketball.html
+++ b/itweakvip/OGInject/Basketball.html
@@ -37,7 +37,7 @@
                     <div class="app-box appscloud-block">
                                                     <div class="col-md-12 app-list-md">
                                 <div class="app-box">
-                                    <img class="img-responsive ios-icon app-icon" src="Basketball.jpg" style="border-radius: 19px;">
+                                    <img class="img-responsive ios-icon app-icon" src="Basketball3.jpg" style="border-radius: 19px;">
                                     <div class="app-info">
                                         <div class="app-name">Basketball</div>
                                         <p class="app-version" style="font-size: 10px">Will work on all devices: windows, mac, android, IOS</p>
@@ -56,7 +56,7 @@
 						<br>
 						
                                     </div>
-                                    <a href="#" onclick="install('Basketball.jpg', 'Watch Basketball Free','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
+                                    <a href="#" onclick="install('Basketball3.jpg', 'Watch Basketball Free','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>Install</b></span>
                                     </a>
                                     <div class="clearfix"></div>
