--- a/index.html
+++ b/index.html
@@ -159,6 +159,33 @@
 <div class="item-subtitle">Answers to GF(iOS/Android)</div>
 </div>
 </div>
+   
+<div class="item-content">
+<div class="item-media"><img class="app-icon" src="Bloons TD 6.png"></div>
+<div class="item-inner">
+<div class="item-title-row">
+<div class="item-title">Bloons TD 6</div>
+<div class="item-after">
+<a href="itweakvip/OGInject/t1.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
+</div>
+</div>
+<div class="item-subtitle">IOS / Android</div>
+</div>
+
+
+</div>
+
+<div class="item-content">
+<div class="item-media"><img class="app-icon" src="drastic ds emulator image.png"></div>
+<div class="item-inner">
+<div class="item-title-row">
+<div class="item-title">DS Emulator+6200 games</div>
+<div class="item-after">
+<a href="itweakvip/OGInject/t3.html" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
+</div>
+</div>
+<div class="item-subtitle">IOS/Android</div>
+</div>
 
 <div class="item-content">
 <div class="item-media"><img class="app-icon" src="qIPObrm.jpg"></div>
