--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
 </div>
 </div>
 <div class="item-subtitle">IOS / Android</div>
+</div>
+</div>
 
 <div class="item-content">
 <div class="item-media"><img class="app-icon" src="qIPObrm.jpg"></div>
