--- a/itweakvip/OGInject/soccer.html
+++ b/itweakvip/OGInject/soccer.html
@@ -37,7 +37,7 @@
                     <div class="app-box appscloud-block">
                                                     <div class="col-md-12 app-list-md">
                                 <div class="app-box">
-                                   <img class="img-responsive ios-icon app-icon" src="soccer5.jpg" style="border-radius: 19px;">
+                                   <img class="img-responsive ios-icon app-icon" src="Soccer5.jpg" style="border-radius: 19px;">
                                     <div class="app-info">
                                         <div class="app-name">Soccer</div>
                                          <p class="app-version" style="font-size: 10px">Will work on all devices: windows, mac, android, IOS</p>
@@ -55,7 +55,7 @@
 						<br>
 									
                                     </div>
-                                    <a href="#" onclick="install('soccer5.jpg', 'Soccer','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
+                                    <a href="#" onclick="install('Soccer5.jpg', 'Soccer','og_geo_seperator')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>Install</b></span>
                                     </a>
                                     <div class="clearfix"></div>
